--- a/fpga_projects/system/system.qsf
+++ b/fpga_projects/system/system.qsf
@@ -223,4 +223,8 @@ set_location_assignment PIN_AF17 -to io_ssegs_7[2]
 set_location_assignment PIN_AG18 -to io_ssegs_7[1]
 set_location_assignment PIN_AA14 -to io_ssegs_7[0]
 set_location_assignment PIN_AD15 -to io_neopixel_data
+set_location_assignment PIN_A17 -to io_miiEther0_gtx_clk
+set_location_assignment PIN_C20 -to io_miiEther0_mgmt_clk
+set_location_assignment PIN_B21 -to io_miiEther0_mgmt_data
+set_location_assignment PIN_C19 -to io_miiEther0_reset_n
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
