--- a/fpga_projects/system/system.qsf
+++ b/fpga_projects/system/system.qsf
@@ -121,15 +121,6 @@ set_location_assignment PIN_V6 -to io_sdram_we_n
 set_location_assignment PIN_U2 -to io_sdram_dqm[0]
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_global_assignment -name SMART_RECOMPILE OFF
-set_global_assignment -name VERILOG_FILE ../../generated/riscv_full/SinglePortRam.v
-set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/wbuart_with_buffer.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/wishbone.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/wbuart_with_ihex.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/wb_master_breakout.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/uart_tx.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/uart_rx.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/ihex.sv
-set_global_assignment -name VERILOG_FILE ../../generated/riscv_full/FullSystemTop.v
 set_location_assignment PIN_U1 -to io_sdram_data[31]
 set_location_assignment PIN_U4 -to io_sdram_data[30]
 set_location_assignment PIN_T3 -to io_sdram_data[29]
@@ -227,4 +218,23 @@ set_location_assignment PIN_A17 -to io_miiEther0_gtx_clk
 set_location_assignment PIN_C20 -to io_miiEther0_mgmt_clk
 set_location_assignment PIN_B21 -to io_miiEther0_mgmt_data
 set_location_assignment PIN_C19 -to io_miiEther0_reset_n
+set_global_assignment -name VERILOG_FILE ../../generated/riscv_full/crc32.v
+set_global_assignment -name VERILOG_FILE ../../generated/riscv_full/AsyncResetReg.v
+set_global_assignment -name VERILOG_FILE ../../generated/riscv_full/SinglePortRam.v
+set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/wbuart_with_buffer.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/wishbone.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/wbuart_with_ihex.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/wb_master_breakout.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/uart_tx.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/uart_rx.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../../generated/riscv_full/ihex.sv
+set_global_assignment -name VERILOG_FILE ../../generated/riscv_full/FullSystemTop.v
+set_location_assignment PIN_B17 -to io_miiEther0_tx_clk
+set_location_assignment PIN_B19 -to io_miiEther0_tx_data[3]
+set_location_assignment PIN_A19 -to io_miiEther0_tx_data[2]
+set_location_assignment PIN_D19 -to io_miiEther0_tx_data[1]
+set_location_assignment PIN_C18 -to io_miiEther0_tx_data[0]
+set_location_assignment PIN_A18 -to io_miiEther0_tx_en
+set_location_assignment PIN_B18 -to io_miiEther0_tx_err
+set_location_assignment PIN_AB22 -to o_mii_tx_clk_out
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
